# pyrotobuf

./: .gitignore  .mise.toml  Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml  ci.yaml
python/pyrotobuf/: __init__.py  __main__.py
src/: lib.rs
tests/: conftest.py  test_protobuf.py  test_services.py
