[package]
name = "pyrotobuf"
version = "0.1.0"
edition = "2021"

[lib]
name = "_pyrotobuf"
crate-type = ["cdylib", "rlib"]

[dependencies]
bytes = "1.6.0"
prost-reflect = { version = "0.13.0", features = ["serde", "text-format"] }
pyo3 = { version = "0.20.3", features = ["extension-module", "serde"] }
serde = "1.0.197"
serde_json = "1.0.114"
